# think-with-feedback

./: .gitignore
codeforces-cots/: README.md  dockerinator_test.py  dockerinator_test.sh  fewshotscript.py  go+extract_boths.py  go+extract_checker_type.py  go+find_simulations.py  go+solutions_py.py  pyproject.toml  render+solutions.py  render+solutions_py.py  requirements.txt  solutions_py.py  test_code_maker.py
codeforces-cots/checker-classification/: make_checker_classifications.py  make_checker_decision_prompts.py  process_checker_classifications.py
codeforces-cots/dockerinator/: __main__.py  async_docker_utils.py  async_exec.py  asyncer.py  run_in_containers.py
codeforces-cots/experiment-icl/: gpt4omini.py  run.py
codeforces-cots/experiment-regeneration/: run.py
codeforces-cots/experiment-repair/: run.py
codeforces-cots/flow_checker_classification/: 1__make_checker_decision_prompts.py  2__make_checker_classifications.py  make_checker_classifications.py  make_checker_decision_prompts.py  process_checker_classifications.py
codeforces-cots/flow_lua/: fetch_process_solutions_py.py  lua_prompts.py  steps.ipynb
codeforces-cots/flow_main/: README.md  exec_checkable_answers.py  exec_mutants.py  exec_snippets.py  exec_snippets.sh  exec_snippets_via_workdir.py  extract_boths.py  extract_checker_type.py  extract_fuzzable_final_answers.py  fetch_checker_classification.py  mutate_solutions.py  process_solutions_py.py  simulations.py  steps_full.ipynb
codeforces-cots/flow_mutants/: README.md  create_mutant_fixing_prompt.py  execute_unit_test_prompt.py  (+7 more)
(+206 files in other folders)
